--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.5.3",
+    "react-player": "^2.14.1",
     "react-slick": "^0.29.0",
     "swiper": "^11.0.5"
   },
