--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@heroicons/react": "^2.1.1",
     "@mui/material": "^5.15.2",
     "bootstrap": "^5.3.2",
+    "lottie-react": "^2.4.0",
     "next": "14.0.4",
     "react": "^18",
     "react-bootstrap": "^2.9.2",
